--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -9,7 +9,7 @@
   <img src="https://soyesq.dm1.livefilestore.com/y2pgZxCydclxYlpIE7WVWWtFvSYA1-YCwsbvCS8brFWwNiXcq0UnyfaND0ocIgk-xVviwYC3bkC25neLyfVJm7UJ9VY5FVTnM8d-R1HB4Jivkk/me.jpg?psid=1" alt="Stephan">
 
   <header>Hello, it's nice to meet you</header>
-  <p>I'm Matt, an avid video gamer who enjoys simplifying experiences through clean design.  I enjoy forging clarity through brevity.  I take great pride in brainstorming and mocking out designs to imagine simple and intuitive solutions.</p>
+  <p>I'm Matt, an avid redneck gamer who enjoys simplifying experiences through clean design.  I enjoy forging clarity through brevity.  I take great pride in brainstorming and mocking out designs to imagine simple and intuitive solutions.</p>
 
   <header>Learning through experience</header>
   <p>You can discover a great deal about a person by seeing what they've done through their travels.</p>
