--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -6,7 +6,7 @@
 
 <section id='about'>
 
-  <img src="https://soyesq.dm1.livefilestore.com/y2pgZxCydclxYlpIE7WVWWtFvSYA1-YCwsbvCS8brFWwNiXcq0UnyfaND0ocIgk-xVviwYC3bkC25neLyfVJm7UJ9VY5FVTnM8d-R1HB4Jivkk/me.jpg?psid=1" alt="Stephan">
+  <img src="http://www.cbtaudio.com/assets/two_tubes.jpg" alt="Two Tubes">
 
   <header>What up, it's nice to meet you</header>
   <p>I'm Matt, an avid redneck gamer who enjoys simplifying experiences through clean design.  I enjoy forging clarity through brevity.  I take great pride in brainstorming and mocking out designs to imagine simple and intuitive solutions.</p>
