--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -8,11 +8,11 @@
 
   <img src="http://www.cbtaudio.com/assets/two_tubes.jpg" alt="Two Tubes">
 
-  <header>What up, it's nice to meet you</header>
-  <p>I'm Matt, an avid redneck gamer who enjoys simplifying experiences through clean design.  I enjoy forging clarity through brevity.  I take great pride in brainstorming and mocking out designs to imagine simple and intuitive solutions.</p>
+  <header>Welcome to CBTAudio!</header>
+  <p>CBTAudio is an experienced audio equipment restoration shop in the South Hills of Pittsburgh, PA.  We specialize in amplifier repair for brands like Soundcraftsmen, Adcom and Rockford Fosgate.</p>
 
-  <header>Learning through experience</header>
-  <p>You can discover a great deal about a person by seeing what they've done through their travels.</p>
+  <header>Restoration and Measurement</header>
+  <p>We also offer a full suite of test and measurement capabilities for audio power amplifiersYou can discover a great deal about a person by seeing what they've done through their travels.</p>
 
   <div id="resume"><a href="">My Resume</a></div>
 
