--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,7 +1,8 @@
 <nav>
-  <a href='#'>Contact</a>
-  <a href='#design'>Design</a>
+  <a href='#services'>Services</a>
+  <a href='#brands'>Brands</a>
   <a href='#about'>About</a>
+  <a href='#contact'>Contact</a>
 </nav>
 
 <section id='about'>
@@ -12,17 +13,25 @@
   <p>CBTAudio is an experienced audio equipment restoration shop in the South Hills of Pittsburgh, PA.  We specialize in amplifier repair for brands like Soundcraftsmen, Adcom and Rockford Fosgate.</p>
 
   <header>Restoration and Measurement</header>
-  <p>We also offer a full suite of test and measurement capabilities for audio power amplifiersYou can discover a great deal about a person by seeing what they've done through their travels.</p>
+  <p>We also offer a full suite of test and measurement capabilities for audio power amplifiers.</p>
 
-  <div id="resume"><a href="">My Resume</a></div>
+  <div id="resume"><a href="">Contact Us</a></div>
 
 </section>
 
-<section id='design'>
-  <header>Good design starts with good intention</header>
 
-  <img src=https://fj14ow.dm1.livefilestore.com/y2pPy46WZDqaf2Uo-ngbTc1D8yBi05NonW3P7JUInAJtIu56aLHv2Q3djSrKr61aPvHtTfHwukIwx4UdpqsiBQqbdA03w2v4emRvBLLbzvrndw/portfolio-icons-rotated.png?psid=1"" alt="report"</img>
-  <img src="https://fxjioq.dm1.livefilestore.com/y2p_xCKqv9VufSfquIHfC9noGcUT7kVd923rjNCP_Xch-it2sV4DmrUi-q_lyhlMt4AaCDcMbf29_sZN8NC-abLiX4Fu4kk1eQkUNsmgqndUck/portfolio-convdoc.png?psid=1" alt="conversion-doc"</img>
-  <img src="https://fxlcmq.dm1.livefilestore.com/y2pjjiCuMaOxTKwGPekDUgEX-6IdDA6mJtn2qaW6dz0l0DPT0oHEh5mgcVZAd3bLGNNitjNg3fpb0wnfk2X0IBFeYRs6m57QgIgQvagNtyYSbc/portfolio-graph.png?psid=1" alt="report"</img>
+<section id='services'>
+  <header>Amplifier Repair</header>
 
+  <header>Amplifier Recapping & Cleaning</header>
+
+  <header>Amplifier Testing and Adjustment</header>
+
+</section>
+
+
+<section id='brands'>
+  <header>Although we can repair just about any vintage or late model amplifier,  we specialize in these brands as we have current stock of parts for these brands enabling a quick repair turnaround.</header>
+  <img src="http://www.cbtaudio.com/assets/rockford_fosgate_logo.jpg" alt="Rockford Fosgate"</img>
+  <img src="http://www.cbtaudio.com/assets/adcom_logo.jpg" alt="Adcom"</img>
 </section>
