--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,6 +1,6 @@
 <nav>
   <a href='#services'>Services</a>
-  <a href='#brands'>Brands</a>
+  <a href='brands'>Brands</a>
   <a href='#about'>About</a>
   <a href='#contact'>Contact</a>
 </nav>
