--- a/app/views/portfolio/brands.html.erb
+++ b/app/views/portfolio/brands.html.erb
@@ -1,8 +1,7 @@
 <nav>
-  <a href='index#services'>Services</a>
-  <a href='brands#brands'>Brands</a>
-  <a href='index#about'>About</a>
-  <a href='index#contact'>Contact</a>
+  <a href='index'>Services</a>
+  <a href='brands'>Brands</a>
+  <a href='index'>Home</a>
 </nav>
 
 
@@ -12,5 +11,6 @@
   <header>Although we can repair just about any vintage or late model amplifier,  we specialize in these brands as we have current stock of parts for these brands enabling a quick repair turnaround.</header>
   <img src="http://www.cbtaudio.com/assets/rockford_fosgate_logo.jpg" alt="Rockford Fosgate"</img>
   <img src="http://www.cbtaudio.com/assets/adcom_logo.jpg" alt="Adcom"</img>
+  <img src="http://www.cbtaudio.com/assets/soundcraftsmen_logo.jpg" alt="Soundcraftsmen"</img>
 
 </section>
