--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,8 +1,7 @@
 <nav>
-  <a href='#services'>Services</a>
+  <a href='services'>Services</a>
   <a href='brands'>Brands</a>
-  <a href='#about'>About</a>
-  <a href='#contact'>Contact</a>
+  <a href='index'>Home</a>
 </nav>
 
 <section id='about'>
@@ -30,8 +29,3 @@
 </section>
 
 
-<section id='brands'>
-  <header>Although we can repair just about any vintage or late model amplifier,  we specialize in these brands as we have current stock of parts for these brands enabling a quick repair turnaround.</header>
-  <img src="http://www.cbtaudio.com/assets/rockford_fosgate_logo.jpg" alt="Rockford Fosgate"</img>
-  <img src="http://www.cbtaudio.com/assets/adcom_logo.jpg" alt="Adcom"</img>
-</section>
