--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
 </head>
 <body>
 
+<nav>
+  <a href='services'>Services</a>
+  <a href='brands'>Brands</a>
+  <a href='index'>Home</a>
+</nav>
+
 <%= yield %>
 
 </body>
