--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -1,3 +1,10 @@
+<nav>
+  <a href='index' id='logo'>
+  <a href='services'>Services</a>
+  <a href='brands'>Brands</a>
+  <a href='index'>Home</a>
+</nav>
+
 <section id='about'>
 
   <img src="http://www.cbtaudio.com/assets/two_tubes.jpg" alt="Two Tubes">
