Freggin mailto form is in

--- a/app/views/portfolio/index.html.erb
+++ b/app/views/portfolio/index.html.erb
@@ -8,7 +8,7 @@
   <header>Restoration and Measurement</header>
   <p>We also offer a full suite of test and measurement capabilities for audio power amplifiers.</p>
 
-  <div id="resume"><a href="">Contact Us</a></div>
+  <div id="resume"><a href="contacts/new">Contact Us</a></div>
 
 </section>
 
