--- a/app/assets/stylesheets/portfolio/layout/about.sass
+++ b/app/assets/stylesheets/portfolio/layout/about.sass
@@ -1,5 +1,5 @@
 #about
-  background-color: rgba(11, 189, 216, 1)
+  background-color: rgba(216, 11, 11, 0.24)
   padding-top: 94px
 
   img
@@ -31,7 +31,7 @@
     margin-bottom: 20%
     a
       background-color: #dd4939
-      border: 1px solid #dd4939
+      border: 2px solid #b20000
       color: white
       padding: 4px
       text-decoration: none
